Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12073

Firefox 49 fails to start due to GetUserObjectInformation failure

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.14
    • Win32SS
    • None
    • Revision 72869

    Description

      When loading Firefox 49.0.0.6099, it crashes because of a "page fault". The debug log is attached.

      EDIT: The change in code mentioned in the comments fixed the crash, now it just sits in the process list without showing anything. I have attached a new debug log.

      Attachments

        1. debug.log
          14 kB
          Zero3K
        2. debug_firefox.log
          43 kB
          Zero3K
        3. winsta.c.patch
          1 kB
          jimtabor
        4. firefox49.txt
          36 kB
          encoded
        5. rosdbg.txt
          87 kB
          Zero3K

        Issue Links

          Activity

            People

              ThFabba ThFabba
              Zero3K Zero3K
              Votes:
              8 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: