[USER32_APITEST] - Extend GetUserObjectInformation tests by adding tests for UOI_NAME on the default as well as custom window stations/desktops. CORE-12073

svn path=/trunk/; revision=72900